Table users {
  id integer [primary key]
  name varchar
  mobile_number VARCHAR(15) UNIQUE 
}

Table Doctors {
  doctor_id integer [primary key]
  name varchar
  doctor_email varchar 
  doctor_number varchar
  image_url varchar
  specialization varchar
  experience_years int
  achievement varchar
  google_review_url varchar
  average_rating decimal(2,1)
  total_reviews int
  dotor_sign_image varchar
  dotor_stamp_image varchar
}

Table Services {
  service_id integer [primary key]
  doctor_id integer [ref: > Doctors.doctor_id]
  service_name varchar
}

Table consultingTime {
  consultingTimeId integer [primary key]
  doctor_id int [ref: > Doctors.doctor_id]
  startTime time
  endTime time
  repeat bool
}

Table consulting_days {
  id int [pk]
  consultingTimeId int [ref:> consultingTime.consultingTimeId]
  day varchar  
}

Table TimeSlot {
  slot_id integer [primary key]
  doctor_id int [ref: > Doctors.doctor_id]
  date date
  start_time time
  end_time time
  is_available boolean
}

Table patientDetails {
  patient_id int [primary key]
  user_id int [ref: > users.id]
  patient_name varchar
  patient_age int
  gender varchar
  weight DECIMAL(5,2)
  relation varchar
  recorded_at timestamp
}

Table appointments {
  appointment_id int [primary key]
  doctor_id int [ref: > Doctors.doctor_id]
  user_id int [ref: > users.id]
  slot_id int [ref:> TimeSlot.slot_id]
  patient_id int [ref:> patientDetails.patient_id]
  appointment_date date
  is_family boolean
  consulting_type varchar
  status varchar
  complaint TEXT
  source varchar
  ivr_reference_id varchar 
  ivr_status varchar
  Visit_type varchar
  payment_status bool
  created_at TIMESTAMP
  updated_at TIMESTAMP
}

Table patient_followups {
  patient_followups_id int [pk]
  appointment_id int [ref:> appointments.appointment_id]
  status varchar
  message text
}

Table appointment_status_history {
  id int [pk]
  appointment_id int [ref:> appointments.appointment_id]
  status varchar
  updated_at timestamp
}

Table doctor_unavailability {
  id int [pk]
  doctor_id int [ref:> Doctors.doctor_id]
  date date
  reason varchar
}